@@ -43,6 +43,8 @@ Version 1.3.8+svn:
  * miscellaneous and bug fixes:
    * various bug fixes and code cleanups
    * fixed a glitch where an item halo shifted position when zooming
+   * map label length is correctly determined for multibyte character
+     and thus the limit has been reduced to 32 characters again (bug #6855)
 
 Version 1.3.8:
  * campaigns:
